added ability to collapse lines whoaaa, now my tetris game is fully playable, yayyyyyy

--- a/tetris-canvas.html
+++ b/tetris-canvas.html
@@ -12,7 +12,7 @@
 	<body>
 		<div id="tetris">
 			<div class="col-md-4" id="left"><canvas id="hold"></canvas></div>
-			<div class="col-md-4" id="middle"><canvas id="board" height="300"></canvas></div>
+			<div class="col-md-4" id="middle"><canvas id="board"></canvas></div>
 			<div class="col-md-4" id="right"><canvas id="next"></canvas></div>
 		</div>
 		<script src="tetris-canvas.js"></script>
