got the NEXT list of blocks to display yayyyyyy it's soo awesome why don't exclamation points work in git msgs? why??

--- a/tetris-canvas.html
+++ b/tetris-canvas.html
@@ -11,10 +11,10 @@
 
 	<body>
 		<div id="tetris">
-			<div class="col-md-4" id="left"><canvas id="hold"></canvas></div>
-			<div class="col-md-4" id="middle"><canvas id="board"></canvas></div>
-			<div class="col-md-4" id="right"><canvas id="next"></canvas></div>
+			<!-- <div class="col-md-3" id="left"><canvas id="hold"></canvas></div> -->
+			<div class="col-md-3" id="middle"><canvas id="board"></canvas></div>
+			<div class="col-md-2" id="right"><canvas id="next"></canvas></div>
 		</div>
-		<script src="tetris-canvas.js"></script>
+		<script src="tetris-canvas.js"></script>	
 	</body>
 </html>
