--- a/tetris-canvas.html
+++ b/tetris-canvas.html
@@ -11,7 +11,7 @@
 
 	<body>
 		<div id="tetris">
-			<!-- <div class="col-md-3" id="left"><canvas id="hold"></canvas></div> -->
+			<div class="col-md-3" id="left"><canvas id="hold"></canvas></div>
 			<div class="col-md-3" id="middle"><canvas id="board"></canvas></div>
 			<div class="col-md-2" id="right"><canvas id="next"></canvas></div>
 		</div>
