saving because about to make major changes in styling

--- a/tetris-canvas.html
+++ b/tetris-canvas.html
@@ -5,14 +5,14 @@
 		<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
 		<link href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet">
 		<style type="text/css">
-			#hold, #board, #next {border: 1px solid black;}
+			/*#hold, #board, #next {border: 1px solid black;}*/
 		</style> 
 	</head>
 
 	<body>
 		<div id="tetris">
 			<div class="col-md-1" id="left"><canvas id="hold"></canvas></div>
-			<div class="col-md-2" id="middle"><canvas id="board"></canvas></div>
+			<div class="col-md-3" id="middle"><canvas id="board"></canvas></div>
 			<div class="col-md-1" id="right"><canvas id="next"></canvas></div>
 		</div>
 		<script src="tetris-canvas.js"></script>	
