--- a/tetris-canvas.html
+++ b/tetris-canvas.html
@@ -11,9 +11,10 @@
 
 	<body>
 		<div id="tetris">
-			<div class="col-md-1" id="left"><canvas id="hold"></canvas></div>
+			<!-- <div class="col-md-1" id="left"><canvas id="hold"></canvas></div>
 			<div class="col-md-3" id="middle"><canvas id="board"></canvas></div>
-			<div class="col-md-1" id="right"><canvas id="next"></canvas></div>
+			<div class="col-md-1" id="right"><canvas id="next"></canvas></div> -->
+			<canvas id="canvas"></canvas>
 		</div>
 		<script src="tetris-canvas.js"></script>	
 	</body>
