--- a/tetris-canvas.html
+++ b/tetris-canvas.html
@@ -2,11 +2,11 @@
 	<head>
 		<title>Tetris with Canvas</title>
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-		<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
+		<!-- <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
 		<link href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet">
 		<style type="text/css">
 			/*#hold, #board, #next {border: 1px solid black;}*/
-		</style> 
+		</style> -->
 	</head>
 
 	<body>
