now allows rotating at top of grid, also spawns new pieces halfway in

--- a/tetris.html
+++ b/tetris.html
@@ -6,6 +6,6 @@
 
 	<body>
 		<div id="tetris"><canvas id="canvas"></canvas></div>
-		<script src="tetris-canvas.js"></script>	
+		<script src="tetris.js"></script>	
 	</body>
 </html>
