--- a/tetris.html
+++ b/tetris.html
@@ -5,6 +5,7 @@
 	</head>
 
 	<body>
+		<p>Testing</p>
 		<div id="tetris"><canvas id="canvas"></canvas></div>
 		<script src="tetris.js"></script>	
 	</body>
