ignore this msg

--- a/tetris.html
+++ b/tetris.html
@@ -6,6 +6,7 @@
 
 	<body>
 		<p>Testing</p>
+		<p>Making a change</p>
 		<div id="tetris"><canvas id="canvas"></canvas></div>
 		<script src="tetris.js"></script>	
 	</body>
